Fix spacing issues

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ body {
 
 select {
     width: 100%;
+    height: 50px;
     padding: 12px;
     border: 1px solid #000000;
     color: black;
@@ -232,7 +233,7 @@ select {
 }
 
 .footer {
-    margin: 120px 0 20px 0;
+    margin: 100px 0 20px 0;
     text-align: center;
     font-size: 17px;
 }
